# wearable-activity-htad

./: .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  requirements.txt
data/htad/: README-2.txt
data/htad/raw/user1/: 1468360517106-acc-watch_tv.txt  1468367368314-acc-eat_chips.txt  1468379023854-acc-brush_teeth.txt  1468461436024-acc-wash_hands.txt  1468683416878-acc-type_on_keyboard.txt  (+2 more)
data/processed/: features.csv  features_accel.csv  features_audio.csv  features_fusion.csv  fusion_features.csv
notebooks/: 05-audio-only-model.ipynb  06-accelerometer-only-model.ipynb  07-fusion-model.ipynb  08-model-comparison.ipynb  10-leave-one-user-out.ipynb  testing.ipynb
outputs/confusion/LightGBM/: user=user1.counts.csv  user=user1.norm.csv  user=user1.report.csv  user=user2.counts.csv  user=user2.norm.csv  user=user2.report.csv  user=user3.counts.csv  user=user3.norm.csv  user=user3.report.csv
outputs/confusion/RandomForest/: user=user1.counts.csv  user=user1.norm.csv  user=user1.report.csv  user=user2.counts.csv  user=user2.norm.csv  user=user2.report.csv  user=user3.counts.csv  user=user3.norm.csv  user=user3.report.csv
outputs/metrics/: acc_metrics.csv  audio_metrics.csv  fusion_metrics.csv  metrics_all_fusion_louo.csv
scripts/: build_features.py
src/wearable_htad/data/: preprocessing.py  windowing.py
src/wearable_htad/features/: extract.py  extract_accel_features.py  pipeline.py  selection.py
src/wearable_htad/modeling/: cv.py  models.py
src/wearable_htad/scripts/: build_features.py  make_fusion.py  train_model.py
(+16 files in other folders)
