[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wearable-htad"
version = "0.1.0"
description = "Human activity recognition using audio + accelerometer data (HTAD dataset)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Johannes Kaisers", email = "your_email@example.com" }]

dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "lightgbm>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
  "jupyter",
  "pre-commit>=3.5",
]

[project.scripts]
wearable-htad-build = "wearable_htad.scripts.build_features:main"
wearable-htad-train = "wearable_htad.scripts.train_model:main"
wearable-htad-fuse = "wearable_htad.scripts.make_fusion:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true